src/components/Layout/Layout.module.scss
@use "breakpoints";
@use "lengths";

.Layout {
    width: 100vw;
    height: 100vh;
    margin: auto;

    .LeftSide,
    .RightSide {
        height: 100%;
        float: left;
    }

    .LeftSide {
        width: 25%;
    }

    .RightSide {
        width: 50%;
    }

    @media only screen and (max-width: breakpoints.$big) {
        width: 75%;
        margin: auto;

        .LeftSide,
        .RightSide {
            display: block;
            width: 100%;
            height: auto;
            margin: 0;
        }

        .RightSide {
            padding-bottom: lengths.$space-from-bottom;
        }
    }

    @media only screen and (max-width: breakpoints.$medium) {
        width: 100%;
        margin: 0;

        .LeftSide,
        .RightSide {
            padding: 0 lengths.$big;
        }

        .RightSide {
            padding-bottom: lengths.$space-from-bottom;
        }
    }
}

